# django-auto-fill-db

./: .gitignore  README.md  pyproject.toml
backend/: manage.py
backend/backend/: settings.py
backend/foodgram/: constants.py  models.py  validators.py
backend/foodgram/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20231204_2232.py
fill_db/: apps.py  config.py  exceptions.py  handers.py  parser.py
fill_db/management/commands/: run.py
